--- a/Hanuman/index.html
+++ b/Hanuman/index.html
@@ -1,6 +1,2 @@
 <p>Hello This is Mani</p>
-<<<<<<< HEAD
-<p>Hi ! This is Ram</p>
-=======
-<p>Hi,This is hanuman </p>
->>>>>>> main
+<p>Hii! This is Hanuman</p>
